@@ -66,7 +66,7 @@ public class SQLEditorProviderImpl implements SQLEditorProvider {
         int i = 1;
         for (;;) {
             String nameFmt = NbBundle.getMessage(SQLEditorProviderImpl.class, "LBL_SQLCommandFileName");
-            String name = MessageFormat.format(nameFmt, new Object[] { new Integer(i) });
+            String name = MessageFormat.format(nameFmt, new Object[] { Integer.valueOf(i) });
             try {
                 sqlFo = tmpFo.createData(name);
             } catch (IOException e) {
